refactor to simple

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "core-js": "^2.4.1",
         "ng2-cookies": "^1.0.3",
         "rxjs": "^5.0.0-rc.1",
-        "zone.js": "^0.6.26"
+        "zone.js": "^0.6.26",
+        "config": "^1.20.1",
+        "js-yaml": "^3.6.0"
     }
 }
