--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,14 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "declaration": true
+        "declaration": true,
+        "typeRoots": [
+            "./node_modules/@types",
+            "./node_modules"
+        ],
+        "types": [
+            "node"
+        ]
     },
     "files": [
         "src/client.ts",
