--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
-    "name": "ng2-jsonrpc-client",
-    "version": "0.0.10",
-    "description": "A JSON-RPC Client for angular2.",
-    "main": "index.js",
-    "scripts": {
-        "test": "test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/nofdev/ng2-jsonrpc-client.git"
-    },
-    "keywords": [
-        "json-rpc",
-        "json",
-        "rpc",
-        "nofdev",
-        "angular2",
-        "client"
-    ],
-    "author": "Aci",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/nofdev/ng2-jsonrpc-client/issues"
-    },
-    "homepage": "https://github.com/nofdev/ng2-jsonrpc-client#readme",
-    "dependencies": {
-        "@angular/common": "^2.1.1",
-        "@angular/core": "^2.1.1",
-        "@angular/http": "^2.1.1",
-        "@angular/platform-browser": "^2.1.1",
-        "core-js": "^2.4.1",
-        "ng2-cookies": "^1.0.3",
-        "rxjs": "^5.0.0-rc.1",
-        "zone.js": "^0.6.26"
-    }
+  "name": "ng2-jsonrpc-client",
+  "version": "0.0.10",
+  "description": "A JSON-RPC Client for angular2.",
+  "main": "index.js",
+  "scripts": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nofdev/ng2-jsonrpc-client.git"
+  },
+  "keywords": [
+    "json-rpc",
+    "json",
+    "rpc",
+    "nofdev",
+    "angular2",
+    "client"
+  ],
+  "author": "Aci",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nofdev/ng2-jsonrpc-client/issues"
+  },
+  "homepage": "https://github.com/nofdev/ng2-jsonrpc-client#readme",
+  "dependencies": {
+    "@angular/http": "^2.3.1",
+    "ng2-cookies": "^1.0.4",
+    "rxjs": "^5.0.1"
+  }
 }
