--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,7 @@
 # Node
 node_modules/*
 npm-debug.log
+.npmignore
 
 # DO NOT IGNORE TYPESCRIPT FILES FOR NPM
 # TypeScript
@@ -29,3 +30,6 @@ Desktop.ini
 
 # FILES
 demo
+src/*
+index.ts
+tsconfig.json
