--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ng2-jsonrpc-client",
-  "version": "0.0.12",
+  "version": "0.0.18",
   "description": "A JSON-RPC Client for angular2.",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
-    "test": "test"
+    "build": "npm i && tsc"
   },
   "repository": {
     "type": "git",
