--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": false,
-        "declaration":true
+        "declaration":true,
+        "outDir": "lib"
     },
     "includes": [
         "src/**/*"
